menu and design updated

--- a/src/ui/internal-audit/src/app/views/private/security/user-role/user-role.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/user-role/user-role.component.html
@@ -223,7 +223,7 @@
               <c-row>
 
                 <div class="row overflow-auto mt-4" *ngIf="roleSelected">
-                  <table datatable id="DataTables_Table_0" [dtOptions]="dtOptions[0]" class="table table-bordered row-border hover" style="width: 100% !important" >
+                  <table datatable id="DataTables_Table_0" [dtOptions]="dtOptions[0]" class="table table-bordered row-border hover datatableStyle" style="width: 100% !important" >
                     <thead>
                       <tr>
                         <th>Module</th>
