--- a/src/ui/internal-audit/src/app/views/private/dashboard/dashboard.component.html
+++ b/src/ui/internal-audit/src/app/views/private/dashboard/dashboard.component.html
@@ -44,7 +44,12 @@
                               <!-- <div style="position: relative; height:20vh; width:20vw">
                                
                               </div> -->
-                                   <c-chart type="pie" [data]="chartPieData"></c-chart>
+                              <div class="row">
+                                <div class="col-md-12">
+                                  <c-chart type="pie" [data]="chartPieData"></c-chart>
+                                </div>
+                              </div>
+                                 <!-- <c-chart type="pie" [data]="chartPieData"></c-chart> -->
                           </c-card-body>
                     </c-card>
                 </c-col>
