--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-criteria/risk-criteria.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-criteria/risk-criteria.component.html
@@ -6,10 +6,12 @@
             <div class="fa fa-align-justify" >Risk Criteria List</div> 
           </div>
           <div class="card-body">
-            <div class="row">
-              <div class="col-sm-7 mb-2">
-                 <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>Create</button> 
-              </div>
+              <div class="row">
+                <div class="col-sm-7 mb-2">
+                  <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton >
+                    <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg> Create
+                  </button>
+                </div>
               <div class="col-sm-5 mb-2">
                 <div class="row">
                   <div class="col-8">
@@ -36,7 +38,8 @@
               </div>
             </div>
             <div class="row overflow-auto">
-                <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover" >                    
+                <!-- <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover" >        -->
+                  <table datatable [dtOptions]="dtOptions[0]" id="DataTables_Table_1"  class="table table-bordered row-border hover datatableStyle" >    
                   <thead>
                     <tr>
                        <th>Country</th>
@@ -65,11 +68,11 @@
                       <td>{{ riskCriteria.description }}</td>
                       <td>
                         <div class="btn-group" role="group" aria-label="Basic example">
-                          <button type="button" class="btn btn-secondary btnSaveColor" (click)="edit(verticallyCenteredModal,riskCriteria)">
-                           Edit
+                          <button type="button" class="btn btn-secondary btnEditColor" (click)="edit(verticallyCenteredModal,riskCriteria)">
+                            <svg cIcon name="cilPencil" size="md" title="Edit Button icon"></svg>
                           </button>
                           <button type="button" class="btn btn-danger btnDeleteColor" (click)="delete(riskCriteria.id)">
-                            Delete
+                            <svg cIcon name="cilTrash" size="md" title="Delete Button Icon"></svg>
                           </button>
                         </div>
                       </td>
@@ -94,7 +97,7 @@
       <c-modal-header>
         <h5 cModalTitle *ngIf="!formService.isEdit(this.riskCriteriaForm.get('id'))">Create Risk Criteria</h5>
         <h5 cModalTitle *ngIf="formService.isEdit(this.riskCriteriaForm.get('id'))">Update Risk Criteria</h5>
-        <button [cModalToggle]="verticallyCenteredModal.id" cButtonClose></button> 
+        <button [cModalToggle]="verticallyCenteredModal.id" cButtonClose></button>
       </c-modal-header> 
        <c-modal-body>
         <div class="col-md-12" >
@@ -137,7 +140,7 @@
 
 
               <div class="form-floating mb-3">
-                <input type="text" class="form-control" formControlName="minimumValue" id="minimumValue" placeholder="Minimum Value">
+                <input type="number" class="form-control" formControlName="minimumValue" id="minimumValue" placeholder="MinimumValue">
                 <label for="floatingInput">Minimum Value</label>
               </div>
            
@@ -147,19 +150,11 @@
                 <small class="text-danger"
                     *ngIf="riskCriteriaForm.get('minimumValue').hasError('required')">
                     This field is required.
-                </small>
-                <small class="text-danger"
-                    *ngIf="riskCriteriaForm.get('minimumValue').hasError('minlength')">
-                    The minimum length for this field is {{riskCriteriaForm.get('minimumValue').errors.minlength.requiredLength}} characters.
-                </small>
-                <small class="text-danger"
-                    *ngIf="countryForm.get('minimumValue').hasError('maxlength')">
-                    The maximum length for this field is {{riskCriteriaForm.get('minimumValue').errors.maxlength.requiredLength}} characters.
-                </small>
+                </small>              
             </div>
       
               <div class="form-floating mb-3">
-                <input type="text" class="form-control" formControlName="maximumValue" id="code" placeholder="Maximum Value">
+                <input type="number" class="form-control" formControlName="maximumValue" id="code" placeholder="Maximum Value">
                 <label for="floatingInput">Maximum Value</label>
               </div>
       
@@ -169,15 +164,7 @@
                 <small class="text-danger"
                     *ngIf="riskCriteriaForm.get('maximumValue').hasError('required')">
                     This field is required.
-                </small>
-                <small class="text-danger"
-                    *ngIf="riskCriteriaForm.get('maximumValue').hasError('minlength')">
-                    The minimum length for this field is {{riskCriteriaForm.get('maximumValue').errors.minlength.requiredLength}} characters.
-                </small>
-                <small class="text-danger"
-                    *ngIf="countryForm.get('maximumValue').hasError('maxlength')">
-                    The maximum length for this field is {{riskCriteriaForm.get('maximumValue').errors.maxlength.requiredLength}} characters.
-                </small>
+                </small>   
             </div>
             <br>
       
@@ -200,11 +187,9 @@
             <br>
 
             <div class="form-floating mb-3">
-              <input type="text" class="form-control" formControlName="score" id="score" placeholder="Score">
+              <input type="number" class="form-control" formControlName="score" id="score" placeholder="Score">
               <label for="floatingInput">Score</label>
-            </div>
-    
-    
+            </div>     
             <div cRow *ngIf="riskCriteriaForm.get('score')?.invalid &&
             riskCriteriaForm.get('score')?.errors &&
                   (riskCriteriaForm.get('score')?.dirty || riskCriteriaForm.get('score')?.touched)">
@@ -212,14 +197,14 @@
                   *ngIf="riskCriteriaForm.get('score').hasError('required')">
                   This field is required.
               </small>
-              <small class="text-danger"
+              <!-- <small class="text-danger"
                   *ngIf="riskCriteriaForm.get('score').hasError('minlength')">
                   The minimum length for this field is {{riskCriteriaForm.get('score').errors.minlength.requiredLength}} characters.
               </small>
               <small class="text-danger"
-                  *ngIf="countryForm.get('score').hasError('maxlength')">
+                  *ngIf="riskCriteriaForm.get('score').hasError('maxlength')">
                   The maximum length for this field is {{riskCriteriaForm.get('score').errors.maxlength.requiredLength}} characters.
-              </small>
+              </small> -->
           </div>
   
             <div class="form-floating">
@@ -227,31 +212,32 @@
               <label for="floatingTextarea">Description</label>
             </div>
             <br>
-            
-            
-            <div class="form-floating">
+                    
+
+            <div class="form-floating mb-3">
               <input class="form-control" placeholder="effectiveFrom" formControlName="effectiveFrom" id="effectiveFrom" type="date" >
               <label for="effectiveFrom">Effective From</label>
+            
+              <div cRow *ngIf="riskCriteriaForm.get('effectiveFrom')?.invalid && riskCriteriaForm.get('effectiveFrom')?.errors &&
+                    (riskCriteriaForm.get('effectiveFrom')?.dirty || riskCriteriaForm.get('effectiveFrom')?.touched)">
+                <small class="text-danger" *ngIf="riskCriteriaForm.get('effectiveFrom').hasError('required')">
+                  This field is required.
+                </small>                                 
+              </div>
             </div>
-            <div cRow *ngIf="riskCriteriaForm.get('effectiveFrom')?.invalid && riskCriteriaForm.get('effectiveFrom')?.errors &&
-                  (riskCriteriaForm.get('effectiveFrom')?.dirty || riskCriteriaForm.get('effectiveFrom')?.touched)">
-              <small class="text-danger" *ngIf="riskCriteriaForm.get('effectiveFrom').hasError('required')">
-                This field is required.
-              </small>                                 
-            </div>
-            <br>
+            
   
-            <div class="form-floating">
+            <div class="form-floating mb-3">
               <input class="form-control" placeholder="effectiveTo" formControlName="effectiveTo" id="effectiveTo" type="date" >
               <label for="effectiveTo">Effective To</label>
+            
+              <div cRow *ngIf="riskCriteriaForm.get('effectiveTo')?.invalid && riskCriteriaForm.get('effectiveTo')?.errors &&
+                    (riskCriteriaForm.get('effectiveTo')?.dirty || riskCriteriaForm.get('effectiveTo')?.touched)">
+                <small class="text-danger" *ngIf="riskCriteriaForm.get('effectiveTo').hasError('required')">
+                  This field is required.
+                </small>                                 
+              </div>
             </div>
-            <div cRow *ngIf="riskCriteriaForm.get('effectiveTo')?.invalid && riskCriteriaForm.get('effectiveTo')?.errors &&
-                  (riskCriteriaForm.get('effectiveTo')?.dirty || riskCriteriaForm.get('effectiveTo')?.touched)">
-              <small class="text-danger" *ngIf="riskCriteriaForm.get('effectiveTo').hasError('required')">
-                This field is required.
-              </small>                                 
-            </div>
-            <br>          
     
         </div>
       </c-modal-body> 
