--- a/src/ui/internal-audit/src/app/views/private/security/designation/designation.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/designation/designation.component.html
@@ -17,8 +17,8 @@
               <div class="col-sm-5 mb-2">
                 <div class="row">
                   <div class="col-8">
-                    <!-- <input type="text" [(ngModel)]="searchText" class="form-control pull-right" placeholder="Search by Code"/> -->
-                    <input type="text" class="form-control pull-right" placeholder="Search by Name"/>
+                    
+                    <input type="text" class="form-control pull-right" placeholder="Search By Designation"/>
                   </div>
                   <div class="col-4">
                     <!-- <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" (click)="search()" >
