--- a/src/ui/internal-audit/src/app/views/private/security/userlist/userlist.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/userlist/userlist.component.html
@@ -35,11 +35,11 @@
                             Search
                         </button>
                         </div>
-                        <div class="col-3">
+                        <!-- <div class="col-3">
                           <button type="button" class="btn btn-secondary mr-1 pull-right btn-block"  (click)="clearSearch()" >
                             Reset
                         </button>
-                        </div>
+                        </div> -->
                       </div>
                     </div>
 
