--- a/src/ui/internal-audit/src/app/views/private/configuration/emailConfig/emailConfig.component.scss
+++ b/src/ui/internal-audit/src/app/views/private/configuration/emailConfig/emailConfig.component.scss
@@ -1,21 +1,21 @@
-.btnCancelColor{
-    background-color: #666666b6;
-    color: white;
-    min-width: 80px;
- }
+// .btnCancelColor{
+//     background-color: #666666b6;
+//     color: white;
+//     min-width: 80px;
+//  }
 
- .btnSaveColor{
-     background-color: #3b6998d7;
-     color: white;
-     min-width: 80px;
-  }
-  .btnDeleteColor{
-    background-color: #a11c1cde;
-    color: white;
-    min-width: 80px;
- }
- .btnCreateColor{
-    background-color: hwb(152 10% 54% / 0.856);
-    color: white;
-    min-width: 80px;
- }
+//  .btnSaveColor{
+//      background-color: #3b6998d7;
+//      color: white;
+//      min-width: 80px;
+//   }
+//   .btnDeleteColor{
+//     background-color: #a11c1cde;
+//     color: white;
+//     min-width: 80px;
+//  }
+//  .btnCreateColor{
+//     background-color: hwb(152 10% 54% / 0.856);
+//     color: white;
+//     min-width: 80px;
+//  }
