--- a/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
+++ b/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
@@ -134,7 +134,7 @@
 
         <div class="form-floating">
           <textarea class="form-control" placeholder="Remarks" formControlName="remarks" id="remarks"></textarea>
-          <label for="floatingTextarea">Remarks</label>
+          <label for="floatingTextarea">Remark</label>
         </div>
 
     </div>
