--- a/src/ui/internal-audit/src/app/views/private/security/user-registration/user-registration.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/user-registration/user-registration.component.html
@@ -56,7 +56,7 @@
                   <div cFormFloating>
                     <input cFormControl formControlName="empEmail" name="empEmai" id="empEmail"
                       placeholder="abc@example.com" type="email" autocomplete="false"/>
-                    <label cLabel for="empEmail">Email address</label>
+                    <label cLabel for="empEmail">Email Address</label>
                   </div>
 
                   <div cRow *ngIf="countryForm.get('empEmail')?.invalid &&
