Label dropdown changed

--- a/src/ui/internal-audit/src/app/views/private/security/user-registration/user-registration.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/user-registration/user-registration.component.html
@@ -79,7 +79,7 @@
                         {{designation.name}}
                       </option>
                     </select>
-                    <label for="empDesignation" class="dropdownLabel">Select Designation</label>
+                    <label for="empDesignation" class="dropdownLabel">Designation</label>
                   </div>
 
                   <div cRow *ngIf="countryForm.get('empDesignation')?.invalid &&
