--- a/src/ui/internal-audit/src/app/views/private/security/user-role/user-role.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/user-role/user-role.component.html
@@ -182,7 +182,7 @@
                         {{role.name}}
                       </option>
                     </select>
-                    <label for="role" class="dropdownLabel">Select Role</label>
+                    <label for="role" class="dropdownLabel">Role</label>
                   </div>
   
                   <!-- <div cRow *ngIf="privilegeForm.get('role')?.invalid &&
@@ -208,7 +208,7 @@
                         {{module.displayName}}
                       </option>                     
                     </select>
-                    <label for="module" class="dropdownLabel">Select Module</label>
+                    <label for="module" class="dropdownLabel">Module</label>
                   </div>
   
                   <!-- <div cRow *ngIf="privilegeForm.get('module')?.invalid &&
