--- a/src/ui/internal-audit/src/app/views/private/security/designation/designation.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/designation/designation.component.html
@@ -7,6 +7,7 @@
             <i class="fa fa-align-justify" ></i><strong>Designation List</strong>
           </div>
           <div class="card-body">
+            <form [formGroup]="searchForm">
             <div class="row">
               <div class="col-sm-7 mb-2">
                   <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>
@@ -18,13 +19,13 @@
                 <div class="row">
                   <div class="col-8">
                     
-                    <input type="text" class="form-control pull-right" placeholder="Search By Designation"/>
+                    <input type="text" formControlName="searchTerm" class="form-control pull-right" placeholder="Search By designation/description"/>
                   </div>
                   <div class="col-4">
                     <!-- <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" (click)="search()" >
                         <i class="fa fa-search" aria-hidden="true"></i>
                     </button> -->
-                    <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" >
+                    <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" (click)="search()">
                       Search
                   </button>
                   </div>
@@ -32,6 +33,7 @@
                 </div>
               </div>
             </div>
+            </form>
             <div class="row overflow-auto">
                 <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover datatableStyle" >
                   <thead>
