rename action and others

--- a/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
+++ b/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
@@ -41,7 +41,7 @@
                     <th>Code</th>
                     <th>Created On</th>
                     <th>Remarks</th>
-                    <th class="col-1 text-center">Action</th>
+                    <th class="col-1 text-center">Actions</th>
                   </tr>
                 </thead>
                 <tbody *ngIf="countries?.length != 0">
