--- a/src/ui/internal-audit/src/app/views/private/security/userlist/userlist.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/userlist/userlist.component.html
@@ -61,7 +61,7 @@
                       <th>Account Locked</th>
                       <th>Account Expired</th>
                       <th>Password Expired</th>
-                      <th class="col-1 text-center">Action</th>
+                      <th class="col-1 text-center">Actions</th>
                     </tr>
                   </thead>
                   <tbody *ngIf="compositeUsers?.length != 0">
