--- a/src/ui/internal-audit/src/app/views/private/security/designation/designation.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/designation/designation.component.html
@@ -9,27 +9,21 @@
           <div class="card-body">
             <form [formGroup]="searchForm">
             <div class="row">
-              <div class="col-sm-7 mb-2">
-                  <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>
-                    <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg> Create
-                  </button>
-  
+              <div class="col-sm-6 mb-2">
+                <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>
+                  <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg> Create
+                </button>
               </div>
-              <div class="col-sm-5 mb-2">
-                <div class="row">
+              <div class="offset-sm-2 col-sm-4 mb-2">
+                <div class="row" >                 
                   <div class="col-8">
-                    
-                    <input type="text" formControlName="searchTerm" class="form-control pull-right" placeholder="Search By designation/description"/>
+                    <input type="text" formControlName="searchTerm" class="form-control pull-right" placeholder="Search by designation/description"/>
                   </div>
                   <div class="col-4">
-                    <!-- <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" (click)="search()" >
-                        <i class="fa fa-search" aria-hidden="true"></i>
-                    </button> -->
-                    <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" (click)="search()">
+                    <button type="button" class="btn btn-secondary  pull-right btn-block" data-toggle="modal" (click)="search()">
                       Search
-                  </button>
+                    </button>
                   </div>
-                  
                 </div>
               </div>
             </div>
@@ -109,6 +103,13 @@
             <div class="form-floating">
               <textarea class="form-control" placeholder="Description" formControlName="description" id="description"></textarea>
               <label for="floatingTextarea">Description</label>
+                <div *ngIf="designationForm.get('description')?.value">
+                  <small class="text-danger"
+                        *ngIf="designationForm.get('description')?.value && designationForm.get('description').hasError('maxlength')">
+                        The maximum length for this field is {{designationForm.get('description').errors.maxlength.requiredLength}} characters.
+                  </small>
+                </div>
+
             </div>
     
         </div>
