--- a/src/ui/internal-audit/src/app/views/private/security/userlist/userlist.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/userlist/userlist.component.html
@@ -10,28 +10,41 @@
             <div class="row">
               <div class="col-lg-12">
                 <form [formGroup]="userListForm">
-                  <div class="row">
+                  <div class="row pull-left">
                     <div class="col-sm-8">
                       <div class="row">
-                        <div class="col-4">
+                        <!-- <div class="col-4">
                           <input type="text" formControlName="userName" id="userName" class="form-control pull-right" placeholder="User Name"/>
+                        </div> -->
+                        <div class="col-4">
+                          <div class="form-floating" >
+                            <input type="text" formControlName="userName" id="userName" class="form-control pull-right" placeholder="User Name"/>
+                            <label for="userName">User Name</label>
+                          </div>
                         </div>
                         <div class="col-4">
-                          <input type="text" formControlName="employeeName" id="employeeName" class="form-control pull-right" placeholder="Employee Name"/>
+                          <div class="form-floating">
+                            <input type="text" formControlName="employeeName" id="employeeName" class="form-control pull-right" placeholder="Employee Name"/>
+                            <label for="employeeName">Employee Name</label> 
+                          </div>                                                  
                         </div>
                         <div class="col-4" >
-                          <select aria-label="Floating label select example" cSelect id="userRole"
+                          <div class="form-floating">
+                            <select aria-label="Floating label select example" cSelect id="userRole"
                             formControlName="userRole" name="userRole">
                             <option value="">Select Role</option>
                             <option *ngFor="let role of roles" [value]="role.name"> {{role.name}}</option>
-                          </select>
+                            </select>
+                            <label for="userRole">Role</label> 
+                          </div>
+                          
                         </div>
                       </div>
                     </div>   
                     <div class="col-sm-4">
                       <div class="row">
                         <div class="col-3">
-                          <button type="button" class="btn btn-secondary mr-1 pull-right btn-block"  (click)="search()" >
+                          <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" style="height: 55px;" (click)="search()" >
                             Search
                         </button>
                         </div>
