--- a/src/ui/internal-audit/src/scss/_custom.scss
+++ b/src/ui/internal-audit/src/scss/_custom.scss
@@ -26,6 +26,19 @@
    white-space: normal;
    height: auto;
 }
+
+.searchLevel{
+   padding: 0.5rem 1rem !important;
+}
+.searchInput{
+   height: 75% !important;
+}
+.searchBtn{
+   float: right; 
+   width: 115%;
+   background: skyblue;
+   color: white;
+}
 .btnCancelColor{
     background-color: #666666b6;
     color: white;
