--- a/src/ui/internal-audit/src/scss/_custom.scss
+++ b/src/ui/internal-audit/src/scss/_custom.scss
@@ -30,12 +30,14 @@
 .searchLevel{
    padding: 0.5rem 1rem !important;
 }
+
+
 .searchInput{
    height: 75% !important;
 }
 .searchBtn{
    float: right; 
-   width: 115%;
+   width: 85px;
    background: skyblue;
    color: white;
 }
