--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment/risk-assessment.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment/risk-assessment.component.html
@@ -8,19 +8,19 @@
           <div class="card-body">
            
             <div class="row">
-              <div class="col-sm-7 mb-2">
+              <div class="col-sm-8 mb-2">
                   <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>
                     <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg> Create
                   </button> 
   
               </div>
-              <div class="col-sm-5 mb-2">
+              <div class="col-sm-4 mb-2">
                 <div class="row">
-                  <div class="form-floating col-10">
+                  <div class="form-floating col-md-10" style="padding-right:50px ;">
                       <input type="text" class="form-control searchInput"  placeholder="Search by Name"/>
                       <label class="searchLevel" for="floatingInput">Name</label>
                   </div>
-                  <div class="col-2">                    
+                  <div class="col-md-2">                    
                     <button type="button" class="btn btn-secondary mr-1 btn-block searchBtn" data-toggle="modal" >
                       Search
                     </button>
@@ -29,7 +29,7 @@
               </div>
             </div>
             <div class="row overflow-auto">
-                <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover" >
+                <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border datatableStyle hover" >
                   <thead>
                     <tr>
                       <th>Risk Assessment Code</th>
@@ -70,7 +70,7 @@
         </div>
       </div>
     </div>
-  </div>
+</div>
 
   <form [formGroup]="riskAssessmentForm" (ngSubmit)="onSubmit(verticallyCenteredModal)" novalidate>
   <c-modal #verticallyCenteredModal alignment="center" id="verticallyCenteredModal">
