--- a/src/ui/internal-audit/src/app/views/private/branch-audit/audit/audit.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/audit/audit.component.html
@@ -1,1 +1,86 @@
-<p>audit works!</p>
+<div class="animated fadeIn">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="card">
+        <div class="card-header">
+          <i class="fa fa-align-justify" ></i> Audit List
+        </div>
+        <div class="card-body">
+          <form >
+            <div class="row">
+              <div class="col-sm-7 mb-2">
+                  <!-- <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>
+                    <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg>  
+                    Create
+                  </button> -->
+              </div>
+            
+              <div class="col-sm-5 mb-2">
+                <div class="row">
+                  
+                  <div class="col-8">
+                    <input type="text" formControlName="searchText" id="searchText" class="form-control pull-right" placeholder="Search by Country"/>
+                  </div>
+                  
+                  <div class="col-2">
+                    <button type="button"  class="btn btn-secondary mr-1 pull-right btn-block"  (click)="search()" >
+                      Search
+                  </button>
+                  </div>
+                  <!-- <div class="col-2">
+                    <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" (click)="clearSearch()"  >
+                      Reset
+                  </button>
+                  </div> -->
+                </div>
+              </div>
+            
+            </div>
+          </form>
+          <div class="row overflow-auto">
+              <table datatable   class="table table-bordered row-border hover datatableStyle" >
+                <thead>
+                  <tr>
+                    <th>Audit Id</th>
+                    <th>Plan Id</th>
+                    <th>Audit Type Name</th>
+                    <th>Country</th>
+                    <th>Audit Period From</th>
+                    <th>Audit Period To</th>
+                    <th>Actions</th>
+                  </tr>
+                </thead>
+                <tbody *ngIf="audits?.length != 0">
+                  <tr *ngFor="let audit of audits">
+                    <td>{{ audit.auditId }}</td>
+                    <td>{{ audit.planId }}</td>
+                    <td>{{ audit.auditTypeName }}</td>
+                    <td>{{ audit.countryName }}</td>
+                    <td>{{ audit.auditPeriodFrom }}</td>
+                    <td>{{ audit.auditPeriodTo }}</td>
+                    <td>{{ audit.createdOn | date:'medium' }}</td>
+                    <td>
+                      <div class="btn-group" role="group" aria-label="Basic example">
+                        <button type="button" class="btn btn-secondary btnEditColor" (click)="edit(verticallyCenteredModal,audit)">
+                          <svg cIcon name="cilPencil" size="md" title="Edit Button icon"></svg>
+                        </button>
+                        <button type="button" class="btn btn-danger btnDeleteColor" (click)="delete(audit.id)">
+                          <svg cIcon name="cilTrash" size="md" title="Delete Button Icon"></svg>
+                        </button>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+                <tbody *ngIf="audits?.length == 0">
+                  <tr>
+                    <td colspan="5" class="no-data-available">No data!</td>
+                  </tr>
+                </tbody>
+              </table>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
